syntax = "proto3";

package evomorph;

option go_package = "evomorph/protos";

// Structure to identify a job.
message Simulation {
  // Simulation UUID.
  uint32 id = 1;
  // Human readable name.
  string name = 2;
}

// Enum contaning status types.
enum StatusType {
  // Status is unset (don't use)
  _ = 0;
  // Status is OK
  OK = 1;
  // Status is ERROR
  ERROR = 2;
}

// Blank signal between services.
message Status {
  // Payload of message.
  StatusType status = 1; 
}
